<resources>

    <string name="app_name">Lock Screen</string>

    <string name="ok">OK</string>
    <string name="network_error">Network Error</string>
    <string name="check_your_connection">Failed to connect to the server. Please check your internet connection.</string>
    <string name="turn_on_connection">Please Turn on Internet Connection.</string>
    <string name="play_store_not_available">Google Play Store app is not installed in your device.</string>

    <string name="lockscreen">Lock Screen</string>
    <string name="lockscreen_sub">Convenient and very light app that help you to lock your phone\'s screen easily.</string>
    <string name="preview">Preview</string>
    <string name="setup_lock">Setup Lock</string>
    <string name="lock_screen_status">Lock Screen Status</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="theme_styles">Theme Styles</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="pattern_lock">Pattern Lock</string>
    <string name="pin_lock">Pin Lock</string>
    <string name="question">Question</string>
    <string name="view_all">View All</string>
    <string name="setting">Setting</string>
    <string name="security">Security</string>
    <string name="system_time">System Time</string>
    <string name="using_12hour_format">Using 12hour Format</string>
    <string name="using_24hour_format">Using 24hour Format</string>
    <string name="lock_hint">Lock Hint</string>
    <string name="lock_hint_position">PIN or Pattern button at top of the screen</string>
    <string name="none">None</string>
    <string name="pin">Pin</string>
    <string name="pattern">Pattern</string>
    <string name="write_here">Write here...</string>
    <string name="please_write_something">Please write something</string>
    <string name="password_is_wrong">Password is wrong</string>
    <string name="lock_is_enable">Lock is enable</string>
    <string name="swipe_left">Swipe Left</string>
    <string name="swipe_right">Swipe Right</string>
    <string name="pin_value">PIN : </string>
    <string name="pattern_value">Pattern : </string>
    <string name="your_password">Your password is...\n</string>
    <string name="privacy_policy">Privacy Policy</string>

    // Question
    <string name="add_question">Add Question</string>
    <string name="own_question">Feel at liberty to contribute your own question to the list.</string>
    <string name="give_answer">Give Answer</string>
    <string name="verify_answer">Verify Answer</string>
    <string name="delete_question">Are you sure you want to delete this question?</string>

    // PIN
    <string name="pin_enter_old">Enter Old PIN</string>
    <string name="pin_remove">Remove PIN</string>
    <string name="pin_enter">Enter New PIN</string>
    <string name="pin_confirm">Confirm Your PIN</string>
    <string name="pin_mismatch">PIN mismatch. Try again.</string>
    <string name="pin_to_unlock">Enter PIN to Unlock</string>
    <string name="pin_wrong">Wrong PIN, Try again.</string>
    <string name="pin_sure_to_remove">Are you sure you want to remove pin?</string>
    <string name="pin_removed_successfully">PIN removed successfully</string>
    <string name="pin_changed_successfully">PIN changed successfully</string>
    <string name="pin_set_successfully">PIN set successfully</string>

    // Popup Message
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="retry">Retry</string>
    <string name="dismiss">Dismiss</string>

    // Rate
    <string name="rate_title">Rate our App</string>
    <string name="rate_message">If you like our app, Please take a moment to rate it in play store. It won\'t take more than a minute.</string>
    <string name="rate_thank_you">Thank you for your support!</string>
    <string name="later">Later</string>
    <string name="rate_now">Rate Now</string>

    // Section Header
    <string name="que_personal">Personal</string>
    <string name="que_good">Good</string>
    <string name="que_fair">Fair</string>
    <string name="que_poor">Poor</string>
    <string name="que_unknown">Unknown</string>

    <string name="security_question_done">Security question set successfully</string>
    <string name="set_security_question">Set security question</string>
    <string name="question_answer_changed">Security question changed successfully</string>
    <string name="remove_all_lock">Are you sure you want to remove all lock?</string>
    <string name="all_lock_removed">All lock removed.</string>
    <string name="password_not_set">Password is not set</string>
    <string name="lock_set_successfully">Lock set successfully</string>

    // Pattern
    <string name="draw_new_pattern">Draw New Pattern</string>
    <string name="draw_pattern_again_to_confirm">Draw pattern again to confirm</string>
    <string name="connect_at_least_4_dots_try_again">Connect at least 4 dots, Try again.</string>
    <string name="wrong_pattern_try_again">Wrong Pattern, Try again.</string>
    <string name="pattern_set_successfully">Pattern set successfully</string>
    <string name="draw_old_pattern">Draw Old Pattern</string>
    <string name="pattern_remove">Remove Pattern</string>
    <string name="pattern_sure_to_remove">Are you sure you want to remove pattern?</string>
    <string name="pattern_removed_successfully">Pattern removed successfully</string>
    <string name="draw_pattern_to_unlock">Draw Pattern to Unlock</string>

    // Permission
    <string name="permission_rationale_title">Permissions Required</string>
    <string name="permission_rationale_message">Please grant the necessary permissions to continue.</string>
    <string name="pick_another_image">Pick Another Image.</string>

    // Downloading
    <string name="downloading">Downloading</string>
    <string name="replace_wallpaper">Wallpaper is already available,\nDo you want to replace it?</string>
    <string name="wallpaper_sure_to_delete">Are you sure you want to delete this wallpaper?</string>
    <string name="wallpaper_deleted_successfully">Wallpaper deleted successfully</string>

    // Exit and Update
    <string name="update">Update</string>
    <string name="exit">Exit</string>
    <string name="want_to_exit">Are you sure, You want to exit?</string>

    //Overlay Permission
    <string name="overlay_permission_title">Overlay Permission Needed</string>
    <string name="overlay_permission_subtitle">Please grant permission for this app to overlay on top of other apps you are currently using. This permission is necessary for displaying the lock screen.</string>
    <string name="open_settings">Open Settings</string>

    // Theme Style
    <!--    <string name="time">12:42</string>-->
    <!--    <string name="meridian">pm</string>-->
    <!--    <string name="date">Feb, 01</string>-->
    <!--    <string name="day">Monday</string>-->

    <string name="time" />
    <string name="meridian" />
    <string name="date" />
    <string name="day" />
    <string name="forgotten_password">Forgotten password?</string>
    <string name="write_your_answer_here">Write your answer here...</string>
    <string name="done">Done</string>

</resources>