<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="@dimen/_120sdp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/rating" />

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center_horizontal"
        android:text="@string/rate_title"
        android:textColor="@color/textMain"
        android:textSize="@dimen/dialog_title" />

    <TextView
        android:id="@+id/dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_2sdp"
        android:fontFamily="@font/lato_regular"
        android:gravity="center_horizontal"
        android:text="@string/rate_message"
        android:textColor="@color/dialog_subtitle"
        android:textSize="@dimen/dialog_subtitle" />

    <TextView
        android:id="@+id/dialog_thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center_horizontal"
        android:text="@string/rate_thank_you"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/dialog_subtitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_button_negative"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_negative_button"
            android:fontFamily="@font/lato_black"
            android:gravity="center"
            android:text="@string/later"
            android:textSize="@dimen/dialog_button" />

        <TextView
            android:id="@+id/dialog_button_positive"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/dialog_positive_button"
            android:fontFamily="@font/lato_black"
            android:gravity="center"
            android:text="@string/rate_now"
            android:textColor="@android:color/white"
            android:textSize="@dimen/dialog_button" />

    </LinearLayout>

</LinearLayout>
