<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginEnd="@dimen/_45sdp"
        android:background="@color/view_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/martel_sans_regular"
                android:text="@string/time"
                android:textSize="@dimen/_28ssp"
                android:textStyle="bold"
                android:theme="@style/LockText" />

            <TextView
                android:id="@+id/txt_time_meridian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_2sdp"
                android:fontFamily="@font/martel_sans_extra_light"
                android:text="@string/meridian"
                android:textSize="@dimen/_14ssp"
                android:theme="@style/LockText" />

            <View
                android:id="@+id/view_line"
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:background="@color/view_white" />

            <TextView
                android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/martel_sans_extra_light"
                android:text="@string/date"
                android:textSize="@dimen/_17ssp"
                android:theme="@style/LockText" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_40sdp"
            android:fontFamily="@font/martel_sans_extra_light"
            android:text="@string/day"
            android:textSize="@dimen/_18ssp"
            android:theme="@style/LockText" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
