<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/view_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@drawable/rounded_trans_square_black"
        android:paddingStart="@dimen/_25sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingEnd="@dimen/_25sdp"
        android:paddingBottom="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/martel_sans_extra_light"
            android:text="@string/day"
            android:textColor="@color/view_white"
            android:textSize="@dimen/_15ssp"
            android:theme="@style/LockText" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/martel_sans_regular"
                android:text="@string/time"
                android:textSize="@dimen/_45ssp"
                android:textStyle="bold"
                android:theme="@style/LockText" />

            <TextView
                android:id="@+id/txt_time_meridian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/martel_sans_extra_light"
                android:text="@string/meridian"
                android:textColor="@color/view_white"
                android:textSize="@dimen/_13ssp" />

        </LinearLayout>

        <View
            android:id="@+id/view_line"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_80sdp"
            android:background="@color/view_white" />

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_85sdp"
            android:fontFamily="@font/martel_sans_extra_light"
            android:text="@string/date"
            android:textSize="@dimen/_15ssp"
            android:theme="@style/LockText" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
